tests/positive/ownership_observe_access.safe
-- Test: ownership_observe_access
-- Description: Local observe via the .Access attribute.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4.p101a:ef2d8fd1
-- Expected: ACCEPT

package ownership_observe_access

   type config is record
      rate : natural;

   type config_ptr is access config;

   function read_with_local_observer
      owner    : config_ptr = new ((rate = 100) as config);
      observer : access constant config = owner.access;
      rate     : natural;

      rate = observer.all.rate;

